Initial commit with working login screen, fonts, assets, themes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
       the License.
       -->
     <string name="app_name">AndroidDevChallenge</string>
+    <string name="logo">Bloom logo</string>
+    <string name="welcome_subtitle">Beautiful home garden solutions</string>
+    <string name="create_account">Create account</string>
+    <string name="login">Log in</string>
 </resources>
