--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="welcome_subtitle">Beautiful home garden solutions</string>
     <string name="create_account">Create account</string>
     <string name="login">Log in</string>
+    <string name="login_with_email">Log in with email</string>
+    <string name="terms">By clicking below, you agree to our Terms of Use and consent to our Privacy Policy.</string>
+    <string name="email_address">Email address</string>
+    <string name="password">Password (8+ characters)</string>
 </resources>
